--- a/Maxin/main.html
+++ b/Maxin/main.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- FAVICON -->
-        <!-- META    -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Maxin Template">
-        <meta name="description" content="Maxin Template - By Omega-Who">
-        <meta name="referrer" content="unsafe-url">
-        <meta name="robots" content="index, follow">
-        <!-- LINK    -->
-        <link rel="me" href="#">
-        <link rel="canonical" href="#">
-        <!-- CSS     -->
-        <link rel="preload" as="style" href="style.css">
-        <link rel="stylesheet" href="style.css">
-        <!-- TITLE   -->
-        <title>Maxin Template</title>
-    </head>
-    <body>
-        <header>
-        </header>
-        <main>
-        </main>
-        <footer>
-        </footer>
-    </body>
+  <head>
+    <!-- FAVICON -->
+    <!-- META    -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Maxin Template">
+    <meta name="description" content="Maxin Template - By Omega-Who">
+    <meta name="referrer" content="unsafe-url">
+    <meta name="robots" content="index, follow">
+    <!-- LINK    -->
+    <link rel="me" href="#">
+    <link rel="canonical" href="#">
+    <!-- CSS     -->
+    <link rel="preload" as="style" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <!-- TITLE   -->
+    <title>Maxin Template</title>
+  </head>
+  <body>
+    <header role="banner">
+
+    </header>
+    <main role="main">
+      <body>
+				<section style="text-align: center;">
+					
+				</section>
+      </body>
+    </main>
+    <footer role="contentinfo">
+
+    </footer>
+  </body>
 </html>
