--- a/Instable/main.html
+++ b/Instable/main.html
@@ -16,7 +16,7 @@
     <link rel="preload" as="style" href="styles.css">
     <link rel="stylesheet" href="styles.css">
     <!-- TITLE   -->
-    <title>Maxin Template</title>
+    <title>Instable Template</title>
   </head>
   <body>
     <header role="banner">
