--- a/Instable/main.html
+++ b/Instable/main.html
@@ -19,18 +19,20 @@
     <title>Instable Template</title>
   </head>
   <body>
-    <header role="banner">
-
-    </header>
     <main role="main">
       <body>
-				<section style="text-align: center;">
-					
+				<section>
+					<h1>Test</h1>
+          <p><a href="omega-who.github.io">test</a></p>
 				</section>
       </body>
     </main>
-    <footer role="contentinfo">
+    <footer role="contentinfo" class="">
+      <div class="">
+        <div class="">
 
+        </div>
+      </div>
     </footer>
   </body>
 </html>
