--- a/Instable/main.html
+++ b/Instable/main.html
@@ -22,8 +22,11 @@
     <main role="main">
       <body>
 				<section>
-					<h1>Test</h1>
-          <p><a href="omega-who.github.io">test</a></p>
+					<h1>Instable HTML</h1>
+          <p><a href="omega-who.github.io">Link Test</a></p>
+          <ul>
+            <li>List Test</li>
+          </ul>
 				</section>
       </body>
     </main>
